<resources>
    <string name="app_name" translatable="false">Flypass</string>
    <string name="next">Continue</string>
    <string name="document">Document</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="see_password">See password</string>
    <string name="login">Login</string>
    <string name="user_not_found">User not found</string>
    <string name="please_wait">Please wait …</string>
    <string name="ivalid_user_or_password">Ivalid user or password.</string>
    <string name="access_token">access_token</string>
    <string name="secure_user_id">secure_user_id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="how_to_pay">How to pay</string>
    <string name="vehicles">Vehicles</string>
    <string name="account_status">Account Status</string>
    <string name="movimientos">Movements</string>
    <string name="mi_cuenta">Account</string>
    <string name="status">Status</string>
    <string name="vehicle_icon">Vehicle icon</string>
    <string name="titular" translatable="false">Titular</string>
    <string name="dynamic_text" translatable="false">%s</string>
    <string name="license_plate">License plate *</string>
    <string name="confirm_license_plate">Confirm license plate *</string>
    <string name="required_field">This field is required.</string>
    <string name="invalid_license_plate">Invalid license plate e.g., ABC123, A1234, AB123, AB1234</string>
    <string name="license_plate_match_error">License plates do not match.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>