<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.vehicle.AddVehicleStep1"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.App.CardView">
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            shimmer:duration="800"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/data_placeholder" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
        <TextView
            android:id="@+id/html_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="User information text."
            android:padding="16dp"
            android:visibility="gone"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_licensePlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/license_plate"
        app:errorEnabled="true"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_licensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_layout_confirm_licensePlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_license_plate"
        app:errorEnabled="true"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_confirm_licensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>
</LinearLayout>